{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 696,
  "lineage": "0f5c6392-d573-6698-835a-8567d527185a",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "agw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdns": [],
                "id": "/subscriptions/6ea6f9f7-0a28-45a1-b63d-c045d73026f2/resourceGroups/my-f23-rg/providers/Microsoft.Network/applicationGateways/my-agw/backendAddressPools/my-backend-address-pool",
                "ip_addresses": [],
                "name": "my-backend-address-pool"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/6ea6f9f7-0a28-45a1-b63d-c045d73026f2/resourceGroups/my-f23-rg/providers/Microsoft.Network/applicationGateways/my-agw/backendHttpSettingsCollection/my-backend-http-settings",
                "name": "my-backend-http-settings",
                "path": "",
                "pick_host_name_from_backend_address": false,
                "port": 80,
                "probe_id": "",
                "probe_name": "",
                "protocol": "Http",
                "request_timeout": 20,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": null,
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/6ea6f9f7-0a28-45a1-b63d-c045d73026f2/resourceGroups/my-f23-rg/providers/Microsoft.Network/applicationGateways/my-agw/frontendIPConfigurations/my-frontend-ip-configuration",
                "name": "my-frontend-ip-configuration",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/6ea6f9f7-0a28-45a1-b63d-c045d73026f2/resourceGroups/my-f23-rg/providers/Microsoft.Network/publicIPAddresses/my-agw-ip",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "",
                "name": "my-httpsfrontend-port",
                "port": 443
              },
              {
                "id": "/subscriptions/6ea6f9f7-0a28-45a1-b63d-c045d73026f2/resourceGroups/my-f23-rg/providers/Microsoft.Network/applicationGateways/my-agw/frontendPorts/my-frontend-port",
                "name": "my-frontend-port",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/6ea6f9f7-0a28-45a1-b63d-c045d73026f2/resourceGroups/my-f23-rg/providers/Microsoft.Network/applicationGateways/my-agw/gatewayIPConfigurations/my-gateway-ip-configuration",
                "name": "my-gateway-ip-configuration",
                "subnet_id": "/subscriptions/6ea6f9f7-0a28-45a1-b63d-c045d73026f2/resourceGroups/my-f23-rg/providers/Microsoft.Network/virtualNetworks/my-network/subnets/my-subnet"
              }
            ],
            "global": [],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "",
                "frontend_ip_configuration_name": "my-httpsfrontend-ip-configuration",
                "frontend_port_id": "",
                "frontend_port_name": "my-httpsfrontend-port",
                "host_name": "",
                "host_names": [],
                "id": "",
                "name": "my-https-listener",
                "protocol": "Https",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "mydavidcloudxyz",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              },
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/6ea6f9f7-0a28-45a1-b63d-c045d73026f2/resourceGroups/my-f23-rg/providers/Microsoft.Network/applicationGateways/my-agw/frontendIPConfigurations/my-frontend-ip-configuration",
                "frontend_ip_configuration_name": "my-frontend-ip-configuration",
                "frontend_port_id": "/subscriptions/6ea6f9f7-0a28-45a1-b63d-c045d73026f2/resourceGroups/my-f23-rg/providers/Microsoft.Network/applicationGateways/my-agw/frontendPorts/my-frontend-port",
                "frontend_port_name": "my-frontend-port",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/6ea6f9f7-0a28-45a1-b63d-c045d73026f2/resourceGroups/my-f23-rg/providers/Microsoft.Network/applicationGateways/my-agw/httpListeners/my-http-listener",
                "name": "my-http-listener",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/6ea6f9f7-0a28-45a1-b63d-c045d73026f2/resourceGroups/my-f23-rg/providers/Microsoft.Network/applicationGateways/my-agw",
            "identity": [
              {
                "identity_ids": [
                  "/subscriptions/6ea6f9f7-0a28-45a1-b63d-c045d73026f2/resourceGroups/my-f23-rg/providers/Microsoft.ManagedIdentity/userAssignedIdentities/example-identity"
                ],
                "type": "UserAssigned"
              }
            ],
            "location": "eastus2",
            "name": "my-agw",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/6ea6f9f7-0a28-45a1-b63d-c045d73026f2/resourceGroups/my-f23-rg/providers/Microsoft.Network/applicationGateways/my-agw/backendAddressPools/my-backend-address-pool",
                "backend_address_pool_name": "my-backend-address-pool",
                "backend_http_settings_id": "/subscriptions/6ea6f9f7-0a28-45a1-b63d-c045d73026f2/resourceGroups/my-f23-rg/providers/Microsoft.Network/applicationGateways/my-agw/backendHttpSettingsCollection/my-backend-http-settings",
                "backend_http_settings_name": "my-backend-http-settings",
                "http_listener_id": "/subscriptions/6ea6f9f7-0a28-45a1-b63d-c045d73026f2/resourceGroups/my-f23-rg/providers/Microsoft.Network/applicationGateways/my-agw/httpListeners/my-http-listener",
                "http_listener_name": "my-http-listener",
                "id": "/subscriptions/6ea6f9f7-0a28-45a1-b63d-c045d73026f2/resourceGroups/my-f23-rg/providers/Microsoft.Network/applicationGateways/my-agw/requestRoutingRules/my-request-routing-rule",
                "name": "my-request-routing-rule",
                "priority": 9,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "my-f23-rg",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 2,
                "name": "Standard_v2",
                "tier": "Standard_v2"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20150501",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": {},
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": []
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_key_vault.kv",
            "azurerm_key_vault_access_policy.key_vault_default_policy",
            "azurerm_key_vault_certificate.certificate",
            "azurerm_public_ip.agw-ip",
            "azurerm_resource_group.my-f23-rg",
            "azurerm_subnet.my-subnet",
            "azurerm_user_assigned_identity.identity",
            "azurerm_virtual_network.my-network",
            "data.azurerm_client_config.current"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_nat_gateway",
      "name": "mynat",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6ea6f9f7-0a28-45a1-b63d-c045d73026f2/resourceGroups/my-f23-rg/providers/Microsoft.Network/natGateways/my-natgw",
            "idle_timeout_in_minutes": 4,
            "location": "eastus2",
            "name": "my-natgw",
            "resource_group_name": "my-f23-rg",
            "resource_guid": "01707c78-488f-4e33-a62d-5ab5057482c8",
            "sku_name": "Standard"
          },
          "dependencies": [
            "azurerm_resource_group.my-f23-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_nat_gateway_public_ip_association",
      "name": "mynatass",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6ea6f9f7-0a28-45a1-b63d-c045d73026f2/resourceGroups/my-f23-rg/providers/Microsoft.Network/natGateways/my-natgw|/subscriptions/6ea6f9f7-0a28-45a1-b63d-c045d73026f2/resourceGroups/my-f23-rg/providers/Microsoft.Network/publicIPAddresses/my-nat-ip",
            "nat_gateway_id": "/subscriptions/6ea6f9f7-0a28-45a1-b63d-c045d73026f2/resourceGroups/my-f23-rg/providers/Microsoft.Network/natGateways/my-natgw",
            "public_ip_address_id": "/subscriptions/6ea6f9f7-0a28-45a1-b63d-c045d73026f2/resourceGroups/my-f23-rg/providers/Microsoft.Network/publicIPAddresses/my-nat-ip"
          },
          "dependencies": [
            "azurerm_nat_gateway.mynat",
            "azurerm_public_ip.nat-ip",
            "azurerm_resource_group.my-f23-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "my-vmssnic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/6ea6f9f7-0a28-45a1-b63d-c045d73026f2/resourceGroups/my-f23-rg/providers/Microsoft.Network/networkInterfaces/my-vmssnic",
            "internal_domain_name_suffix": "gro2tvggkanunefh4zadqql4sc.cx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "my-ipc",
                "primary": true,
                "private_ip_address": "192.168.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/6ea6f9f7-0a28-45a1-b63d-c045d73026f2/resourceGroups/my-f23-rg/providers/Microsoft.Network/virtualNetworks/my-network/subnets/third-subnet"
              }
            ],
            "location": "eastus2",
            "name": "my-vmssnic",
            "private_ip_address": "192.168.1.4",
            "private_ip_addresses": [
              "192.168.1.4"
            ],
            "resource_group_name": "my-f23-rg"
          },
          "dependencies": [
            "azurerm_resource_group.my-f23-rg",
            "azurerm_subnet.third-subnet",
            "azurerm_virtual_network.my-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "tryexample",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6ea6f9f7-0a28-45a1-b63d-c045d73026f2/resourceGroups/my-f23-rg/providers/Microsoft.Network/networkInterfaces/my-vmssnic|/subscriptions/6ea6f9f7-0a28-45a1-b63d-c045d73026f2/resourceGroups/my-f23-rg/providers/Microsoft.Network/networkSecurityGroups/acceptanceTestSecurityGroup1",
            "network_interface_id": "/subscriptions/6ea6f9f7-0a28-45a1-b63d-c045d73026f2/resourceGroups/my-f23-rg/providers/Microsoft.Network/networkInterfaces/my-vmssnic",
            "network_security_group_id": "/subscriptions/6ea6f9f7-0a28-45a1-b63d-c045d73026f2/resourceGroups/my-f23-rg/providers/Microsoft.Network/networkSecurityGroups/acceptanceTestSecurityGroup1"
          },
          "dependencies": [
            "azurerm_network_interface.my-vmssnic",
            "azurerm_network_security_group.my-security",
            "azurerm_resource_group.my-f23-rg",
            "azurerm_subnet.third-subnet",
            "azurerm_virtual_network.my-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "my-security",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6ea6f9f7-0a28-45a1-b63d-c045d73026f2/resourceGroups/my-f23-rg/providers/Microsoft.Network/networkSecurityGroups/acceptanceTestSecurityGroup1",
            "location": "eastus2",
            "name": "acceptanceTestSecurityGroup1",
            "resource_group_name": "my-f23-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "test",
                "priority": 120,
                "protocol": "Tcp",
                "source_address_prefix": "AzureLoadBalancer",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "65200-65535",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "mytest",
                "priority": 130,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "httpaccess",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "Production"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.my-f23-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "agw-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "myproject",
            "fqdn": "myproject.eastus2.cloudapp.azure.com",
            "id": "/subscriptions/6ea6f9f7-0a28-45a1-b63d-c045d73026f2/resourceGroups/my-f23-rg/providers/Microsoft.Network/publicIPAddresses/my-agw-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.10.16.126",
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "my-agw-ip",
            "resource_group_name": "my-f23-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.my-f23-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "nat-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "domain_name_label": "mytryproject",
            "fqdn": "mytryproject.eastus2.cloudapp.azure.com",
            "id": "/subscriptions/6ea6f9f7-0a28-45a1-b63d-c045d73026f2/resourceGroups/my-f23-rg/providers/Microsoft.Network/publicIPAddresses/my-nat-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.10.21.89",
            "ip_version": "IPv4",
            "location": "eastus2",
            "name": "my-nat-ip",
            "resource_group_name": "my-f23-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.my-f23-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "my-sec-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6ea6f9f7-0a28-45a1-b63d-c045d73026f2/resourceGroups/my-f23-rg/providers/Microsoft.Network/virtualNetworks/my-network/subnets/my-sec-subnet",
            "name": "my-sec-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "my-f23-rg",
            "virtual_network_name": "my-network"
          },
          "dependencies": [
            "azurerm_resource_group.my-f23-rg",
            "azurerm_virtual_network.my-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "my-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.21.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6ea6f9f7-0a28-45a1-b63d-c045d73026f2/resourceGroups/my-f23-rg/providers/Microsoft.Network/virtualNetworks/my-network/subnets/my-subnet",
            "name": "my-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "my-f23-rg",
            "virtual_network_name": "my-network"
          },
          "dependencies": [
            "azurerm_resource_group.my-f23-rg",
            "azurerm_virtual_network.my-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "third-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6ea6f9f7-0a28-45a1-b63d-c045d73026f2/resourceGroups/my-f23-rg/providers/Microsoft.Network/virtualNetworks/my-network/subnets/third-subnet",
            "name": "third-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "my-f23-rg",
            "virtual_network_name": "my-network"
          },
          "dependencies": [
            "azurerm_resource_group.my-f23-rg",
            "azurerm_virtual_network.my-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "agsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6ea6f9f7-0a28-45a1-b63d-c045d73026f2/resourceGroups/my-f23-rg/providers/Microsoft.Network/virtualNetworks/my-network/subnets/my-subnet",
            "network_security_group_id": "/subscriptions/6ea6f9f7-0a28-45a1-b63d-c045d73026f2/resourceGroups/my-f23-rg/providers/Microsoft.Network/networkSecurityGroups/acceptanceTestSecurityGroup1",
            "subnet_id": "/subscriptions/6ea6f9f7-0a28-45a1-b63d-c045d73026f2/resourceGroups/my-f23-rg/providers/Microsoft.Network/virtualNetworks/my-network/subnets/my-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.my-security",
            "azurerm_resource_group.my-f23-rg",
            "azurerm_subnet.my-subnet",
            "azurerm_virtual_network.my-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6ea6f9f7-0a28-45a1-b63d-c045d73026f2/resourceGroups/my-f23-rg/providers/Microsoft.Network/virtualNetworks/my-network/subnets/third-subnet",
            "network_security_group_id": "/subscriptions/6ea6f9f7-0a28-45a1-b63d-c045d73026f2/resourceGroups/my-f23-rg/providers/Microsoft.Network/networkSecurityGroups/acceptanceTestSecurityGroup1",
            "subnet_id": "/subscriptions/6ea6f9f7-0a28-45a1-b63d-c045d73026f2/resourceGroups/my-f23-rg/providers/Microsoft.Network/virtualNetworks/my-network/subnets/third-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.my-security",
            "azurerm_resource_group.my-f23-rg",
            "azurerm_subnet.third-subnet",
            "azurerm_virtual_network.my-network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "my-network",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "192.168.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "d4c95d34-50c6-461b-90a7-f64038417e92",
            "id": "/subscriptions/6ea6f9f7-0a28-45a1-b63d-c045d73026f2/resourceGroups/my-f23-rg/providers/Microsoft.Network/virtualNetworks/my-network",
            "location": "eastus2",
            "name": "my-network",
            "resource_group_name": "my-f23-rg",
            "subnet": [
              {
                "address_prefix": "192.168.0.0/24",
                "id": "/subscriptions/6ea6f9f7-0a28-45a1-b63d-c045d73026f2/resourceGroups/my-f23-rg/providers/Microsoft.Network/virtualNetworks/my-network/subnets/my-sec-subnet",
                "name": "my-sec-subnet"
              },
              {
                "address_prefix": "192.168.1.0/24",
                "id": "/subscriptions/6ea6f9f7-0a28-45a1-b63d-c045d73026f2/resourceGroups/my-f23-rg/providers/Microsoft.Network/virtualNetworks/my-network/subnets/third-subnet",
                "name": "third-subnet",
                "security_group": "/subscriptions/6ea6f9f7-0a28-45a1-b63d-c045d73026f2/resourceGroups/my-f23-rg/providers/Microsoft.Network/networkSecurityGroups/acceptanceTestSecurityGroup1"
              },
              {
                "address_prefix": "192.168.21.0/24",
                "id": "/subscriptions/6ea6f9f7-0a28-45a1-b63d-c045d73026f2/resourceGroups/my-f23-rg/providers/Microsoft.Network/virtualNetworks/my-network/subnets/my-subnet",
                "name": "my-subnet",
                "security_group": "/subscriptions/6ea6f9f7-0a28-45a1-b63d-c045d73026f2/resourceGroups/my-f23-rg/providers/Microsoft.Network/networkSecurityGroups/acceptanceTestSecurityGroup1"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.my-f23-rg"
          ]
        }
      ]
    }
  ]
}